# ai-interview-judge

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py  main.py  test_demo.py
backend/core/: __init__.py  config.py  exceptions.py  logging_config.py
backend/services/: __init__.py  analysis_service.py  audio_service.py  llm_service.py  ocr_service.py  video_service.py
cpp_core/: CMakeLists.txt
cpp_core/include/ai_interview/: slide_detector.hpp
cpp_core/src/: bindings.cpp  slide_detector.cpp
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu
docs/: CONTRIBUTING.md  DEVELOPER.md  FRONTEND_SETUP.md  LANGUAGE_DETECTION.md  LANGUAGE_DETECTION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SHARING_CHEATSHEET.txt  SHARING_GUIDE.md  SPRINT_5_COMPLETE.md
frontend/: Dockerfile  README.md  app.py
scripts/: README.md  build.sh  share-cloudflare.sh  share.sh  start.sh  status.sh
tests/cpp/: CMakeLists.txt
tests/python/: test_demo.py  test_language_detection.py
