[project]
name = "ai-interview-judge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=1.21.0",
    "opencv-python>=4.11.0.86",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10"]
